@@ -20,6 +20,7 @@ import java.beans.Introspector;
 import java.beans.PropertyDescriptor;
 import java.beans.PropertyEditor;
 import java.beans.PropertyEditorManager;
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.Map;
@@ -27,6 +28,7 @@ import java.util.ServiceLoader;
 
 import org.jproggy.snippetory.Encodings;
 import org.jproggy.snippetory.TemplateContext;
+import org.jproggy.snippetory.engine.spi.AliasLink;
 import org.jproggy.snippetory.engine.spi.CaseFormatter;
 import org.jproggy.snippetory.engine.spi.CropFormatter;
 import org.jproggy.snippetory.engine.spi.DateFormatter;
@@ -41,6 +43,7 @@ import org.jproggy.snippetory.spi.Configurer;
 import org.jproggy.snippetory.spi.DynamicAttributes;
 import org.jproggy.snippetory.spi.Encoding;
 import org.jproggy.snippetory.spi.FormatConfiguration;
+import org.jproggy.snippetory.spi.Link;
 
 public class Attributes {
   public static final String BACKWARD = "backward";
@@ -55,12 +58,14 @@ public class Attributes {
     return result;
   }
 
-  Map<String, FormatConfiguration> formats = new LinkedHashMap<String, FormatConfiguration>();
+  Map<String, FormatConfiguration> formats = new LinkedHashMap<>();
   Encoding enc;
+  Link link;
+  String linkName;
   String delimiter;
   String prefix;
   String suffix;
-  private TemplateContext ctx;
+  private final TemplateContext ctx;
 
   Attributes(Location parent, TemplateContext ctx) {
     enc = parent == null ? Encodings.NULL : parent.md.enc;
@@ -78,29 +83,32 @@ public class Attributes {
   }
 
   private void subAttribute(String parent, String attrib, String value) {
-    FormatConfiguration format = formats.get(parent);
-    if (format == null) {
-      throw new SnippetoryException("Missing parent " + parent + " for sub-attribute " + attrib + "='" + value + '\'');
+    Object base = formats.get(parent);
+    if (base == null) {
+      if (!parent.equals(linkName)) {
+        throw new SnippetoryException("Missing parent " + parent + " for sub-attribute " + attrib + "='" + value + '\'');
+      }
+      base = link;
     }
     try {
-      BeanInfo desc = Introspector.getBeanInfo(format.getClass());
+      BeanInfo desc = Introspector.getBeanInfo(base.getClass());
       for (PropertyDescriptor prop : desc.getPropertyDescriptors()) {
         if (prop.getName().equals(attrib)) {
-          setProperty(format, prop, value);
+          setProperty(base, prop, value);
           return;
         }
       }
     } catch (IntrospectionException e) {
       throw new SnippetoryException(e);
     }
-    if (format instanceof DynamicAttributes) {
-      ((DynamicAttributes)format).setAttribute(attrib, value);
+    if (base instanceof DynamicAttributes) {
+      ((DynamicAttributes) base).setAttribute(attrib, value);
       return;
     }
     throw new SnippetoryException("Can't understand attribute " + parent + '.' + attrib + "='" + value + "'");
   }
 
-  private void setProperty(FormatConfiguration format, PropertyDescriptor prop, String value) {
+  private void setProperty(Object format, PropertyDescriptor prop, String value) {
     try {
       PropertyEditor editor = toEditor(prop);
       editor.setAsText(value);
@@ -112,11 +120,14 @@ public class Attributes {
     }
   }
 
-  @SuppressWarnings("unchecked")
   private PropertyEditor toEditor(PropertyDescriptor prop) throws InstantiationException, IllegalAccessException {
     Class<?> editorType = prop.getPropertyEditorClass();
     if (editorType != null) {
-      return (PropertyEditor)editorType.newInstance();
+      try {
+        return (PropertyEditor) editorType.getConstructor().newInstance();
+      } catch (InvocationTargetException | NoSuchMethodException e) {
+        throw new SnippetoryException(e);
+      }
     }
     Class<?> type = prop.getPropertyType();
     if (Enum.class.isAssignableFrom(type)) {
@@ -131,6 +142,17 @@ public class Attributes {
       void handle(Attributes target, String key, String value) {
         FormatConfiguration format = FormatRegistry.INSTANCE.get(key, value, target.ctx);
         target.formats.put(key, format);
+      }
+    },
+    LINK {
+      @Override
+      void handle(Attributes target, String key, String value) {
+        Link link = LinkRegistry.INSTANCE.get(key, value, target.ctx);
+        if (target.link != null) {
+          throw new SnippetoryException("Only one link per node possible");
+        }
+        target.link = link;
+        target.linkName = key;
       }
     },
     ENCODING {
@@ -195,6 +217,7 @@ public class Attributes {
     FormatRegistry.INSTANCE.register("case", new CaseFormatter());
     FormatRegistry.INSTANCE.register("default", new DefaultFormatter());
     FormatRegistry.INSTANCE.register("null", new NullFormatter());
+    LinkRegistry.INSTANCE.register("alias", AliasLink::new);
     for (Encodings e : Encodings.values()) {
       EncodingRegistry.INSTANCE.register(e);
     }
@@ -206,7 +229,7 @@ public class Attributes {
   }
 
   public static class Registry {
-    private final Map<String, Types> attribs = new HashMap<String, Types>();
+    private final Map<String, Types> attribs = new HashMap<>();
 
     private Registry() {}
 
